# docinfer

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
docinfer/: __init__.py  cli.py
docinfer/models/: __init__.py  config.py
docinfer/prompts/: __init__.py
docinfer/services/: __init__.py  ai_analyzer.py  output.py  pdf_extractor.py
pdf_metadata_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: cli.py
src/docinfer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: __init__.py  config.py  metadata.py
src/prompts/: __init__.py  metadata.py
src/services/: __init__.py  ai_analyzer.py  output.py  pdf_extractor.py
