[project]
name = "docinfer"
version = "0.1.0"
description = "Extract and infer metadata from PDF documents using AI-powered analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Tino Kanngiesser", email = "tinokanngiesser@gmail.com" }
]
keywords = ["pdf", "metadata", "extraction", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/tidyeval/docinfer"
Repository = "https://github.com/tidyeval/docinfer"
BugTracker = "https://github.com/tidyeval/docinfer/issues"

[project.scripts]
docinfer = "docinfer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
pythonpath = "docinfer"


